# MultiRefLfD-TPGP

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
TeX/: main.tex
TeX/sections/: about.tex  appendix.tex  experiments.tex  faq.tex  references.bib  setup.tex  titlepage.tex
lfd/: __init__.py  run.py
lfd/depr/: run.py  utils.py
lfd/utils/: __init__.py  alignment.py  constants.py  demonstrations.py  frames.py  gp.py  plots.py  utils.py
lfd/utils/lasa/: __init__.py  helpers.py  lasa.py
manimations/: main.py
notebooks/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  README.md
notebooks/tutorials/: Approximate_GP_Objective_Functions.ipynb  SVGP_Multitask_GP_Regression.ipynb  SVGP_Regression_CUDA.ipynb
tpgp/: __init__.py
tpgp/depr/: run.py  utils.py
tpgp/utils/: __init__.py  alignment.py  frames.py  plots.py
tpgp/utils/lasa/: __init__.py  helpers.py  lasa.py
